# steam-ext-csgo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: api.rst  conf.py  index.md
docs/extensions/: annotations.py  resourcelinks.py
examples/: casket.py
steam/_gc/: state.py
steam/ext/csgo/: __init__.py  backpack.py  client.py  enums.py  models.py  state.py
steam/ext/csgo/protobufs/: __init__.py  base.py  base_gcmessages.py  cstrike.py  cstrike15_gcmessages.py  econ.py  econ_gcmessages.py  engine_gcmessages.py  gcsdk.py  gcsdk_gcmessages.py  sdk.py  steammessages.py  struct_messages.py  system_messages.py
