[tool.poetry]
name = "steam-ext-csgo"
version = "1.0.0a"
description = "An extension for steam.py to interact with the Counter Strike-Global Offensive Game Coordinator"
authors = ["Gobot1234"]
license = "MIT"
keywords=["csgo", "steam.py", "steam", "steamio", "steam-api"]
classifiers=[
    "Development Status :: 2 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "steam" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Gobot1234/steam-ext-csgo/issues"

[tool.poetry.dependencies]
python = "^3.7"
steamio = {git = "https://github.com/Gobot1234/steam.py", branch="main"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
atomic = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
