[tool.poetry]
name = "steam-ext-csgo"
version = "1.0.0a"
description = "An extension for steam.py to interact with the Counter Strike-Global Offensive Game Coordinator"
authors = ["Gobot1234"]
license = "MIT"
keywords=["csgo", "steam.py", "steam", "steamio", "steam-api"]
classifiers=[
    "Development Status :: 2 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "steam" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Gobot1234/steam-ext-csgo/issues"

[tool.poetry.dependencies]
python = "^3.7"
steamio = {git = "https://github.com/Gobot1234/steam.py.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
black = "^22.3"
isort = "^5.10"
poethepoet = "^0.13"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5"
furo = "^2022.4.7"
mypy = "^0.942"
sphinxcontrib_trio = "^1.1.2"
sphinx-copybutton = "^0.5.0"
sphinx-codeautolink = "^0.10.0"
myst-parser = "^0.17.2"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
fmt = ["_black", "_isort"]
doc = "sphinx-build -b html -n -T -W --keep-going docs/ docs/_build"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
atomic = true
ensure_newline_before_comments = true

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core==1.1.0a7"]  # ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
